@@ -6,17 +6,11 @@ import com.qiniu.android.dns.NetworkInfo;
 import com.qiniu.android.dns.Record;
 import com.qiniu.android.dns.util.Hex;
 
-import org.apache.http.HttpEntity;
-import org.apache.http.HttpResponse;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.impl.client.DefaultHttpClient;
-
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.HttpURLConnection;
+import java.net.URL;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
@@ -47,39 +41,28 @@ public final class DnspodEnterprise implements IResolver {
 
     @Override
     public Record[] resolve(Domain domain, NetworkInfo info) throws IOException {
-        URI uri = null;
-        try {
-            uri = new URI("http://" + ip + "/d?ttl=1&dn=" + encrypt(domain.domain)
-                    + "&id=" + id);
-        } catch (URISyntaxException e) {
-            throw new AssertionError(e);
+        URL url = new URL("http://" + ip + "/d?ttl=1&dn=" + encrypt(domain.domain)
+                + "&id=" + id);
+
+        HttpURLConnection httpConn = (HttpURLConnection) url.openConnection();
+        int responseCode = httpConn.getResponseCode();
+        if (responseCode != HttpURLConnection.HTTP_OK) {
+            return null;
         }
 
-        HttpClient client = new DefaultHttpClient();
-        HttpGet request = new HttpGet();
-        request.setURI(uri);
-        HttpResponse response = client.execute(request);
-        int responseCode = response.getStatusLine().getStatusCode();
-        if (responseCode != 200) {
+        int length = httpConn.getContentLength();
+        if (length <= 0 || length > 1024){
             return null;
         }
-        HttpEntity entity = response.getEntity();
-        long length = entity.getContentLength();
-        if (length > 1024 || length == 0) {
+        InputStream is = httpConn.getInputStream();
+        byte[] data = new byte[length];
+        int read = is.read(data);
+        is.close();
+        if (length == 0){
             return null;
         }
-        InputStream is = entity.getContent();
-        byte[] data = new byte[(int) length];
-        int read = 0;
-        try {
-            read = is.read(data);
-        } catch (IOException e) {
-            throw e;
-        } finally {
-            is.close();
-        }
-        String body = new String(data, 0, read);
-        String result = decrypt(body);
+        String response = new String(data, 0, read);
+        String result = decrypt(response);
         String[] r1 = result.split(",");
         if (r1.length != 2) {
             return null;
